intercept web extensions api

--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -10,7 +10,7 @@
 
   "titleHandleEvent": { "message": "eventos disparados (handleEvent)" },
   "titleAddEventListener": { "message": "eventos adicionados (addEventListener)" },
-  "titleTimer": { "message": "temporizadores (setTimeout | setInterval)" },
+  "titleWebAPIs": { "message": "APIs Web" },
 
   "messageNothingDetected": { "message": "nada foi detectado até o momento" }
 }
