--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -10,7 +10,7 @@
 
   "titleHandleEvent": { "message": "triggered events (handleEvent)" },
   "titleAddEventListener": { "message": "attached events (addEventListener)" },
-  "titleTimer": { "message": "timers (setTimeout | setInterval)" },
+  "titleWebAPIs": { "message": "Web APIs" },
 
   "messageNothingDetected": { "message": "nothing detected so far" }
 }
