--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -12,5 +12,6 @@
   "titleAddEventListener": { "message": "eventos adicionados (addEventListener)" },
   "titleWebAPIs": { "message": "APIs Web" },
 
-  "messageNothingDetected": { "message": "nada foi detectado até o momento" }
+  "messageNothingDetected": { "message": "nada foi detectado até o momento" },
+  "messageLoading": { "message": "carregando..." }
 }
