--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,5 +1,5 @@
 {
-  "manifestName": { "message": "Luminous: Interceptador de eventos JavaScript" },
+  "manifestName": { "message": "Luminous: Bloqueador de eventos JavaScript" },
   "manifestDescription": { "message": "Uma extensão experimental para identificar, analisar e bloquear a execução de códigos e a coleta de eventos via JavaScript em seu navegador." },
 
   "linkHelpText": { "message": "ajuda" },
