--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -14,5 +14,17 @@
   "titleWebAPIs": { "message": "Web APIs" },
 
   "messageNothingDetected": { "message": "nothing detected so far" },
-  "messageLoading": { "message": "loading..." }
+  "messageLoading": { "message": "loading..." },
+
+  "settingsAdvancedTitle": { "message": "Advanced"},
+  "settingsStoredDataLocalTitle": { "message": "Stored Data: Local"},
+  "settingsStoredDataSyncTitle": { "message": "Stored Data: Sync"},
+  "settingsReadMoreText": { "message": "Read more about"},
+  "settingsStorageSyncMdnHref": { "message": "https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/sync" },
+  "settingsStorageLocalMdnHref": { "message": "https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/local" },
+  "settingsClearAllButtonText": { "message": "clear all" },
+  "settingsConfirmWindowText": { "message": "are you sure?" },
+  "settingsStorageEmptyText": { "message": "nothing stored" },
+  "settingsTabText": { "message": "Tab" },
+  "settingsTabClosedText": { "message": "closed" }
 }
