missing translations and docs

--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -16,10 +16,11 @@
   "messageNothingDetected": { "message": "nothing detected so far" },
   "messageLoading": { "message": "loading..." },
 
-  "settingsAdvancedTitle": { "message": "Advanced"},
-  "settingsStoredDataLocalTitle": { "message": "Stored Data: Local"},
-  "settingsStoredDataSyncTitle": { "message": "Stored Data: Sync"},
-  "settingsReadMoreText": { "message": "Read more about"},
+  "settingsTitle": { "message": "Settings" },
+  "settingsAdvancedTitle": { "message": "Advanced" },
+  "settingsStoredDataLocalTitle": { "message": "Locally stored data" },
+  "settingsStoredDataSyncTitle": { "message": "Synced stored data" },
+  "settingsReadMoreText": { "message": "Read more about" },
   "settingsStorageSyncMdnHref": { "message": "https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/sync" },
   "settingsStorageLocalMdnHref": { "message": "https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/local" },
   "settingsClearAllButtonText": { "message": "clear all" },
