--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -7,7 +7,7 @@
   "linkHelpHref": { "message": "https://gbaptista.github.io/luminous" },
 
   "checkboxInjectionEnabledGeneral": { "message": "todos os sites" },
-  "checkboxShowListenerFunctions": { "message": "mostrar detalhes do código interceptado" },
+  "checkboxShowCodeDetails": { "message": "mostrar detalhes do código interceptado" },
 
   "titleHandleEvent": { "message": "eventos disparados (handleEvent)" },
   "titleAddEventListener": { "message": "eventos adicionados (addEventListener)" },
