l18n for all settings texts

--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -16,17 +16,33 @@
   "messageNothingDetected": { "message": "nothing detected so far" },
   "messageLoading": { "message": "loading..." },
 
-  "settingsTitle": { "message": "Settings" },
-  "settingsAdvancedTitle": { "message": "Advanced" },
-  "settingsStoredDataLocalTitle": { "message": "Locally stored data" },
-  "settingsStoredDataSyncTitle": { "message": "Synced stored data" },
-  "settingsReadMoreText": { "message": "Read more about" },
+  "settingsCodeInjectionTitle": { "message": "code injection" },
+  "settingsPopupTitle": { "message": "popup" },
+  "settingsBadgeCounterTitle": { "message": "badge counter" },
+  "settingsStoredDataLocalTitle": { "message": "locally stored data" },
+  "settingsStoredDataSyncTitle": { "message": "synced stored data" },
+  "settingsReadMoreText": { "message": "read more about" },
   "settingsStorageSyncMdnHref": { "message": "https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/sync" },
   "settingsStorageLocalMdnHref": { "message": "https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/storage/local" },
   "settingsClearAllButtonText": { "message": "clear all" },
   "settingsConfirmWindowText": { "message": "are you sure?" },
   "settingsStorageEmptyText": { "message": "nothing stored" },
-  "settingsTabText": { "message": "Tab" },
+  "settingsTabText": { "message": "tab" },
   "settingsTabClosedText": { "message": "closed" },
-  "settingsResetToDefaultText": { "message": "reset to default" }
+  "settingsResetToDefaultText": { "message": "reset to default" },
+  "settingsInjectionWarningText": { "message": "any domain will have the code injected by default unless it is disabled in the list below." },
+  "settingsAddDomainButtonText": { "message": "add domain" },
+  "settingsNewDomainPlaceHolderText": { "message": "new domain" },
+  "settingsRemoveButtonText": { "message": "remove" },
+  "settingsPopupTooltipTitle": { "message": "tooltip displayed when hovering over the intercepted code" },
+  "settingsBadgeCounterSumByTitle": { "message": "how should we sum the intercepted codes?" },
+  "settingsBadgeCounterSumByExecutionsLabel": { "message": "by total of interceptions" },
+  "settingsBadgeCounterSumByKindLabel": { "message": "by kind of code intercepted" },
+  "settingsBadgeCounterExectutionsTitle": { "message": "what code executions should be included in the sum?" },
+  "settingsBadgeCounterKindsTitle": { "message": "what kind of code executions should be included in the sum?" },
+
+  "allowedText": { "message": "allowed" },
+  "blockedText": { "message": "blocked" },
+
+  "settingsInvalidDomainMessage": { "message": "invalid domain" }
 }
