--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -16,14 +16,33 @@
   "messageNothingDetected": { "message": "nada foi detectado até o momento" },
   "messageLoading": { "message": "carregando..." },
 
-  "settingsStoredDataLocalTitle": { "message": "Dados armazenados localmente" },
-  "settingsStoredDataSyncTitle": { "message": "Dados armazenados sincronizados" },
-  "settingsReadMoreText": { "message": "Leia mais sobre" },
+  "settingsCodeInjectionTitle": { "message": "injeção de códigos" },
+  "settingsPopupTitle": { "message": "popup" },
+  "settingsBadgeCounterTitle": { "message": "contador do ícone" },
+  "settingsStoredDataLocalTitle": { "message": "dados locais" },
+  "settingsStoredDataSyncTitle": { "message": "dados sincronizados" },
+  "settingsReadMoreText": { "message": "leia mais sobre" },
   "settingsStorageSyncMdnHref": { "message": "https://developer.mozilla.org/pt-BR/Add-ons/WebExtensions/API/storage/sync" },
   "settingsStorageLocalMdnHref": { "message": "https://developer.mozilla.org/pt-BR/Add-ons/WebExtensions/API/storage/local" },
-  "settingsClearAllButtonText": { "message": "apagar tudo" },
+  "settingsClearAllButtonText": { "message": "remover tudo" },
   "settingsConfirmWindowText": { "message": "você tem certeza?" },
   "settingsStorageEmptyText": { "message": "nada armazenado" },
-  "settingsTabText": { "message": "Aba" },
-  "settingsTabClosedText": { "message": "fechada" }
+  "settingsTabText": { "message": "aba" },
+  "settingsTabClosedText": { "message": "fechada" },
+  "settingsResetToDefaultText": { "message": "restaurar configurações padrões" },
+  "settingsInjectionWarningText": { "message": "qualquer domínio terá o código injetado a não ser que esteja desabilitado na lista abaixo:" },
+  "settingsAddDomainButtonText": { "message": "adicionar domínio" },
+  "settingsNewDomainPlaceHolderText": { "message": "novo domínio" },
+  "settingsRemoveButtonText": { "message": "remover" },
+  "settingsPopupTooltipTitle": { "message": "tooltip mostrada ao passar o mouse no código interceptado" },
+  "settingsBadgeCounterSumByTitle": { "message": "como devemos somar os códigos interceptados?" },
+  "settingsBadgeCounterSumByExecutionsLabel": { "message": "pelo total de execuções" },
+  "settingsBadgeCounterSumByKindLabel": { "message": "pelo tipo de código interceptado" },
+  "settingsBadgeCounterExectutionsTitle": { "message": "quais tipos de execuções devem ser incluídas na soma?" },
+  "settingsBadgeCounterKindsTitle": { "message": "qual tipo de código interceptado deve ser incluído na soma?" },
+
+  "allowedText": { "message": "permitidas" },
+  "blockedText": { "message": "bloqueadas" },
+
+  "settingsInvalidDomainMessage": { "message": "domínio inválido" }
 }
