--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -40,9 +40,11 @@
   "settingsBadgeCounterSumByKindLabel": { "message": "by kind of code intercepted" },
   "settingsBadgeCounterExectutionsTitle": { "message": "what code executions should be included in the sum?" },
   "settingsBadgeCounterKindsTitle": { "message": "what kind of code executions should be included in the sum?" },
+  "settingsBlockPerDomainTitle": { "message": "website rules" },
 
   "allowedText": { "message": "allowed" },
   "blockedText": { "message": "blocked" },
 
-  "settingsInvalidDomainMessage": { "message": "invalid domain" }
+  "settingsInvalidDomainMessage": { "message": "invalid domain" },
+  "settingsAddRuleButtonText": { "message": "add rule" }
 }
