remove or add domain for custom rules

--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -61,5 +61,6 @@
   "settingsJavaScriptEventsText": { "message": "JavaScript events" },
   "settingsJavaScriptEventsHref": { "message": "https://developer.mozilla.org/en-US/docs/Web/Events" },
 
-  "settingsNoRulesFoundText": { "message": "no rules found" }
+  "settingsNoRulesFoundText": { "message": "no rules found" },
+  "settingsRemoveDomainButtonText": { "message": "remove domain" }
 }
