--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -63,5 +63,15 @@
 
   "settingsNoRulesFoundText": { "message": "no rules found" },
   "settingsRemoveDomainButtonText": { "message": "remove domain" },
-  "settingsBackgroundOptionsTitle": { "message": "automatic settings" }
+  "settingsBackgroundOptionsTitle": { "message": "automatic settings" },
+
+  "settingsDomainDetectedTitle": { "message": "when a new website is accessed:" },
+  "settingsAddDomainToCodeInjectionLabel": { "message": "add to code injection" },
+  "settingsAddDomainToWebsiteRulesLabel": { "message": "add to website rules" },
+  "settingsEventDetectedTitle": { "message": "when a new JavaScript event is detected:" },
+  "settingsAddEventToDefaultTitle": { "message": "add to default rules:" },
+  "settingsAddEventNothingLabel": { "message": "nothing" },
+  "settingsAddEventCommonLabel": { "message": "common" },
+  "settingsAddEventAllLabel": { "message": "all" },
+  "settingsAddEventToWebsiteTitle": { "message": "add to website rules:" }
 }
