--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -70,8 +70,9 @@
   "settingsAddDomainToWebsiteRulesLabel": { "message": "add to website rules" },
   "settingsEventDetectedTitle": { "message": "when a new JavaScript event is detected:" },
   "settingsAddEventToDefaultTitle": { "message": "add to default rules:" },
-  "settingsAddEventNothingLabel": { "message": "nothing" },
+  "settingsAddEventNoneLabel": { "message": "none" },
   "settingsAddEventCommonLabel": { "message": "common" },
   "settingsAddEventAllLabel": { "message": "all" },
+  "settingsAddEventAlmostAllLabel": { "message": "almost all" },
   "settingsAddEventToWebsiteTitle": { "message": "add to website rules:" }
 }
