--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -66,13 +66,16 @@
   "settingsBackgroundOptionsTitle": { "message": "automatic settings" },
 
   "settingsDomainDetectedTitle": { "message": "when a new website is accessed:" },
-  "settingsAddDomainToCodeInjectionLabel": { "message": "add to code injection" },
-  "settingsAddDomainToWebsiteRulesLabel": { "message": "add to website rules" },
+  "settingsAddDomainToCodeInjectionLabel": { "message": "add to [code injection]" },
+  "settingsAddDomainToWebsiteRulesLabel": { "message": "add to [website rules]" },
   "settingsEventDetectedTitle": { "message": "when a new JavaScript event is detected:" },
-  "settingsAddEventToDefaultTitle": { "message": "add to default rules:" },
+  "settingsAddEventToDefaultTitle": { "message": "add to [default rules]:" },
   "settingsAddEventNoneLabel": { "message": "none" },
   "settingsAddEventCommonLabel": { "message": "common" },
   "settingsAddEventAllLabel": { "message": "all" },
   "settingsAddEventAlmostAllLabel": { "message": "almost all" },
-  "settingsAddEventToWebsiteTitle": { "message": "add to website rules:" }
+  "settingsAddEventToWebsiteTitle": { "message": "add to [website rules]:" },
+
+  "settingsNotRecommendedText": { "message": "not recommended" },
+  "settingsDefinitelyNotRecommendedText": { "message": "definitely not recommended" }
 }
