--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -77,5 +77,7 @@
   "settingsAddEventToWebsiteTitle": { "message": "add to [website rules]:" },
 
   "settingsNotRecommendedText": { "message": "not recommended" },
-  "settingsDefinitelyNotRecommendedText": { "message": "definitely not recommended" }
+  "settingsDefinitelyNotRecommendedText": { "message": "definitely not recommended" },
+
+  "settingsReportsTitle": { "message": "reports" }
 }
