--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -7,7 +7,7 @@
   "linkHelpHref": { "message": "https://gbaptista.github.io/luminous/doc/en-US" },
 
   "checkboxInjectionEnabledGeneral": { "message": "all websites" },
-  "checkboxShowCodeDetails": { "message": "show intercepted code details" },
+  "checkboxShowCodeDetails": { "message": "show code details" },
 
   "titleHandleEvent": { "message": "triggered events (handleEvent)" },
   "titleAddEventListener": { "message": "attached events (addEventListener)" },
@@ -88,5 +88,7 @@
   "settingsFilterButtonText": { "message": "filter" },
   "settingsFilterByDomainPlaceHolderText": { "message": "filter by domain" },
   "settingsNoRecordsText": { "message": "no records found" },
-  "settingsReportClearAllButtonText": { "message": "clear all records" }
+  "settingsReportClearAllButtonText": { "message": "clear all records" },
+  "checkboxZoomIn": { "message": "zoom in" },
+  "checkboxApplyToDefault": { "message": "apply actions to default rules" }
 }
