--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -7,7 +7,7 @@
   "linkHelpHref": { "message": "https://gbaptista.github.io/luminous/doc/es" },
 
   "checkboxInjectionEnabledGeneral": { "message": "todas las webs" },
-  "checkboxShowCodeDetails": { "message": "mostrar detalles de código" },
+  "checkboxShowCodeDetails": { "message": "detalles de código" },
 
   "titleHandleEvent": { "message": "eventos activados (handleEvent)" },
   "titleAddEventListener": { "message": "eventos ligados (addEventListener)" },
@@ -90,5 +90,10 @@
   "settingsNoRecordsText": { "message": "ningún registro encontrado" },
   "settingsReportClearAllButtonText": { "message": "limpiar todos los registros" },
   "checkboxZoomIn": { "message": "acercarse" },
-  "checkboxApplyToDefault": { "message": "aplicar a las reglas estándar" }
+  "checkboxApplyToDefault": { "message": "aplicar a las reglas estándar" },
+
+  "checkboxShowPerformanceMetrics": { "message": "métricas de rendimiento" },
+  "sortByText": { "message": "ordenar por" },
+  "sortByCallsText": { "message": "ejecuciones" },
+  "sortByTimeText": { "message": "tiempo" }
 }
