--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -63,18 +63,18 @@
 
   "settingsNoRulesFoundText": { "message": "nenhuma regra encontrada" },
   "settingsRemoveDomainButtonText": { "message": "remover domínio" },
-  "settingsBackgroundOptionsTitle": { "message": "configurações automáticas" },
+  "settingsAutomaticSettingsOptionsTitle": { "message": "configurações automáticas" },
 
   "settingsDomainDetectedTitle": { "message": "quando um novo site for acessado:" },
   "settingsAddDomainToCodeInjectionLabel": { "message": "adicionar em [injeção de códigos]" },
   "settingsAddDomainToWebsiteRulesLabel": { "message": "adicionar em [regras por site]" },
   "settingsEventDetectedTitle": { "message": "quando um novo evento JavaScript for detectado:" },
-  "settingsAddEventToDefaultTitle": { "message": "adicionar em [regras padrões]:" },
+  "settingsAddEventToDefaultTitle": { "message": "adicionar em [regras padrões]" },
   "settingsAddEventNoneLabel": { "message": "nenhum" },
   "settingsAddEventCommonLabel": { "message": "comuns" },
   "settingsAddEventAllLabel": { "message": "todos" },
   "settingsAddEventAlmostAllLabel": { "message": "quase todos" },
-  "settingsAddEventToWebsiteTitle": { "message": "adicionar em [regras por site]:" },
+  "settingsAddEventToWebsiteTitle": { "message": "adicionar em [regras por site]" },
 
   "settingsNotRecommendedText": { "message": "não recomendado" },
   "settingsDefinitelyNotRecommendedText": { "message": "definitivamente não recomendado" },
@@ -82,7 +82,7 @@
   "settingsReportsTitle": { "message": "relatórios" },
   "settingsIndexedDbMdnHref": { "message": "https://developer.mozilla.org/pt-BR/docs/Web/API/IndexedDB_API" },
   "settingsRecordsText": { "message": "registros" },
-  "settingsEnableReportsGenerationText": { "message": "habilitar geração de relatórios" },
+  "settingsEnableReportsGenerationText": { "message": "gerar relatórios" },
   "settingsMostExecutedJavaScriptCodesText": { "message": "códigos JavaScript mais executados:" },
   "settingsDomainsMostJavaScriptCodesText": { "message": "domínios que mais executam códigos JavaScript:" },
   "settingsFilterButtonText": { "message": "filtrar" },
@@ -95,5 +95,17 @@
   "checkboxShowPerformanceMetrics": { "message": "métricas de desempenho" },
   "sortByText": { "message": "ordenar por" },
   "sortByCallsText": { "message": "execuções" },
-  "sortByTimeText": { "message": "tempo gasto" }
+  "sortByTimeText": { "message": "tempo gasto" },
+
+  "settingsBackgroundPerformanceTitle": { "message": "desempenho" },
+
+  "disableText": { "message": "desabilitar" },
+
+  "logsFilterInPlaceholder": { "message": "incluir (expressão regular funciona!)" },
+  "logsFilterOutPlaceholder": { "message": "excluir (expressão regular funciona!)" },
+  "logsFilterAllText": { "message": "todas as abas" },
+  "logsFilterAutoDetectText": { "message": "detectar" },
+  "logsStartButtonText": { "message": "iniciar" },
+  "logsStopButtonText": { "message": "parar" },
+  "logsClearButtonText": { "message": "limpar" }
 }
